--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .main-form{ 
 background-image: url(https://www.nicepng.com/png/full/236-2362567_health-clipart-mental-illness-positive-attitude-icon-png.png);
-background-size: 500px;
+background-size: 250px;
 background-repeat: no-repeat;
 background-position: bottom;
 background-position: bottom 0px right 100px;
@@ -8,16 +8,18 @@ font-family: 'Roboto', sans-serif;
 text-align: left;
 font-weight: bold;
   color: black;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   padding: 100px;
-  background-color: #F4A460;
+  background-color: 	#87CEFA;
   display: inline-block;
   width: 80%;
   border-radius: 100px;
   }
 
 h1{
-  
+  background-color: black;
+  width: 327px;
+  border-radius: 12px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   font-size: 50px;
@@ -25,3 +27,9 @@ h1{
 
 }
 
+span{
+  font-size:large;
+  color: #000000;
+  font-family:helvetica, arial, sans-serif;;
+  font-weight:bold;
+}
