--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,47 @@
-.main-form{ 
-background-image: url(https://www.nicepng.com/png/full/236-2362567_health-clipart-mental-illness-positive-attitude-icon-png.png);
-background-size: 250px;
-background-repeat: no-repeat;
-background-position: bottom;
-background-position: bottom 0px right 100px;
-font-family: 'Roboto', sans-serif;
-text-align: left;
-font-weight: bold;
+.main-form {
+  background-image: url(https://www.nicepng.com/png/full/236-2362567_health-clipart-mental-illness-positive-attitude-icon-png.png);
+  background-size: 250px;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-position: bottom 0px right 100px;
+  font-family: 'Roboto', sans-serif;
+  text-align: left;
+  font-weight: bold;
   color: black;
   margin-bottom: 10px;
   padding: 100px;
-  background-color: 	#87CEFA;
+  background-color: #87CEFA;
   display: inline-block;
   width: 80%;
   border-radius: 100px;
-  }
+}
 
-h1{
+h1 {
   background-color: black;
   width: 327px;
   border-radius: 12px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   font-size: 50px;
-    color: white;
+  color: white;
 
 }
 
-span{
-  font-size:large;
+span {
+  font-size: large;
   color: #000000;
-  font-family:helvetica, arial, sans-serif;;
-  font-weight:bold;
+  font-family: helvetica, arial, sans-serif;
+  ;
+  font-weight: bold;
+}
+
+.submit-button {
+  text-decoration: none;
+  font-weight: bolder;
+  padding: 10px;
+  background-color: red;
+  border-radius: 11px;
+  color: white;
+  font-family: 'Catamaran';
+
 }
